--- a/login.html
+++ b/login.html
@@ -15,20 +15,20 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta content="AgentSite - Conveyancing Services" name="description" />
     <meta content="Ace" name="author" />
-    <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
-    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="agent-site/assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
+    <link href="agent-site/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <link class="main-stylesheet" href="pages/css/themes/corporate.css" rel="stylesheet" type="text/css" />
+    <link href="agent-site/assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="agent-site/assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" media="screen" />
+    <link class="main-stylesheet" href="agent-site/pages/css/themes/corporate.css" rel="stylesheet" type="text/css" />
     <!-- Please remove the file below for production: Contains demo classes -->
-    <link class="main-stylesheet" href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link class="main-stylesheet" href="agent-site/assets/css/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
     window.onload = function()
     {
       // fix for windows 8
       if (navigator.appVersion.indexOf("Windows NT 6.2") != -1)
-        document.head.innerHTML += '<link rel="stylesheet" type="text/css" href="pages/css/windows.chrome.fix.css" />'
+        document.head.innerHTML += '<link rel="stylesheet" type="text/css" href="agent-site/pages/css/windows.chrome.fix.css" />'
     }
     </script>
   </head>
@@ -235,24 +235,24 @@
     </div>
     <!-- END OVERLAY -->
     <!-- BEGIN VENDOR JS -->
-    <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/pace/pace.min.js" type="text/javascript"></script>
     <!--  A polyfill for browsers that don't support ligatures: remove liga.js if not needed-->
-    <script src="assets/plugins/liga.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/modernizr.custom.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/popper/umd/popper.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery/jquery-easy.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-ios-list/jquery.ioslist.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-actual/jquery.actual.min.js"></script>
-    <script src="assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/select2/js/select2.full.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/classie/classie.js"></script>
-    <script src="assets/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/liga.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/jquery/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/modernizr.custom.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/popper/umd/popper.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/jquery/jquery-easy.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/jquery-ios-list/jquery.ioslist.min.js" type="text/javascript"></script>
+    <script src="agent-site/assets/plugins/jquery-actual/jquery.actual.min.js"></script>
+    <script src="agent-site/assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
+    <script type="text/javascript" src="agent-site/assets/plugins/select2/js/select2.full.min.js"></script>
+    <script type="text/javascript" src="agent-site/assets/plugins/classie/classie.js"></script>
+    <script src="agent-site/assets/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
     <!-- END VENDOR JS -->
-    <script src="pages/js/pages.min.js"></script>
+    <script src="agent-site/pages/js/pages.min.js"></script>
     <script>
     $(function()
     {
