--- a/login.html
+++ b/login.html
@@ -15,20 +15,20 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta content="AgentSite - Conveyancing Services" name="description" />
     <meta content="Ace" name="author" />
-    <link href="agent-site/assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
-    <link href="agent-site/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="agent-site/assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="agent-site/assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <link class="main-stylesheet" href="agent-site/pages/css/themes/corporate.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" media="screen" />
+    <link class="main-stylesheet" href="/pages/css/themes/corporate.css" rel="stylesheet" type="text/css" />
     <!-- Please remove the file below for production: Contains demo classes -->
-    <link class="main-stylesheet" href="agent-site/assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link class="main-stylesheet" href="/assets/css/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
     window.onload = function()
     {
       // fix for windows 8
       if (navigator.appVersion.indexOf("Windows NT 6.2") != -1)
-        document.head.innerHTML += '<link rel="stylesheet" type="text/css" href="agent-site/pages/css/windows.chrome.fix.css" />'
+        document.head.innerHTML += '<link rel="stylesheet" type="text/css" href="/pages/css/windows.chrome.fix.css" />'
     }
     </script>
   </head>
