--- a/calendar_lang.html
+++ b/calendar_lang.html
@@ -330,7 +330,7 @@
             <span class="icon-thumbnail"><i class="pg-icon">flag</i></span>
           </li>
           <li class="m-b-40">
-            <a href="http://changelog.pages.revox.io/" rel="noreferrer" target="_blank"><span class="title">Changelog</span></a>
+            <a href="https://changelog.pages.revox.io/" rel="noreferrer" target="_blank"><span class="title">Changelog</span></a>
             <span class="icon-thumbnail"><i class="pg-icon">clipboard</i></span>
           </li>
         </ul>
