--- a/dashboard.html
+++ b/dashboard.html
@@ -88,7 +88,7 @@
                 <span class="icon-thumbnail"><i class="pg-icon">QD</i></span>
               </li>
               <li class="">
-                <a href="calendar_lang.html">Track Quotes</a>
+                <a href="quote.html">Track Quotes</a>
                 <span class="icon-thumbnail"><i class="pg-icon">TQ</i></span>
               </li>
               <li class="">
